# wails-in-mists

./: .editorconfig  .gitignore  LICENSE  README.md  character_playground.gd  character_playground.tscn  project.godot  rust.gdextension.uid  watch-rust.sh
blender/: models.blend  models.blend1  short_sword.blend
class_icons/: base_level.svg.import  character_spawner.svg.import  enemy_spawner.svg.import  npc_spawner.svg.import  player_spawner.svg.import
curves/: flame_curve.tres
effects/: spark_experiment.gd  spark_experiment.tscn
game/: export_presets.cfg  project.godot  rust.gdextension
gui/: label_link.gd  label_link.gd.uid  size_limiter.gd  size_limiter.gd.uid
import_scripts/: as_mesh_instance.gd  as_what_you_are.gd
lib/: character_scene.gd  character_scene.gd.uid  config.gd  game_root.gd  ruleset.gd
logic/: controlled_characters.gd  game_root.gd  terrain_wrapper.gd
materials/: base_lavel_main.gdshader  circle_shader.gdshader  eyes_material.tres  hair_default.tres  terrain3d.gdshader  terrain3d_1_0_0.gdshader  terrain3d_1_0_0.gdshader.uid  terrain_project_pass.gdshader  terrain_projections.tres
models/: armor_test.glb  armor_test.glb.import  armor_test_Material.png.import  broken_char_test.glb  broken_char_test.glb.import  broken_char_test.tscn  character-test.tscn  character_test.glb  character_test.glb.import  d20.glb.import  forest_pile.glb.import  hair0.glb  hair0.glb.import  hair0v2.glb  (+27 more)
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/fow/: fow_posprocessing.gdshader  fow_posprocessing.gdshader.uid  mod.rs  rusty_fow.rs  rusty_fow.tscn
(+1136 files in other folders)
