[package]
name = "rusty-mists"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
earcutr = "0.5.0"
geo = "0.30.0"
godot = { version = "0.3.1", features = ["experimental-godot-api"] }
stackblur-iter = "0.2.0"
